--- a/src/app/todolist2/todolist2.component.html
+++ b/src/app/todolist2/todolist2.component.html
@@ -1,36 +1,14 @@
 <div>
-
   <div class="container">
-    <div>
-        <input id= field [(ngModel)] = "newTask">
-      <button (click)="add()"> Dodaj</button>
-    </div>
+<app-add-task (emitTask)="add($event)"></app-add-task>
   </div>
-
 <div class="container">
-
   <div>
-    <ng-container *ngIf="tasksList.length>0; else noTask" >
-<ul>
-  <li *ngFor="let task of tasksList">
-    {{task}} <button (click)="remove(task)">Usuń</button>
-    <button (click)="done(task)">Zrobione</button>
-  </li>
-</ul>
-</ng-container>
-<ng-template #noTask>
-<p>Brak zadań na dziś! </p>
-</ng-template>
+<app-todo-task [tasksList]="tasksList" (emitDone)="done($event)" (emitRemove)="remove($event)"></app-todo-task>
   </div>
 
   <div>
-   <p> Zadania wykonane: {{taskDone.length}} </p>
-      <ul>
-          <li *ngFor="let task of taskDone">
-            {{task}}
-          </li>
-        </ul>
+  <app-done-task [taskDone]="taskDone"></app-done-task>
   </div>
 </div>
-
 </div>
